banner CRUD + other fixes
